[package]
name = "alloy-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3.32"
reqwest = { version = "0.13.3", features = ["stream"] }
tokio = { version = "1.52.2", features = ["full"] }
tokio-util = "0.7.18"
url = "2.5.8"

[dev-dependencies]
httpmock = "0.8.3"
tempfile = "3.27.0"
